# gpu-spectral-channel-DNS

./: .gitignore  CMakeLists.txt  README.md  RPCFKernels.cu  RPCFKernels.cuh  build.bat  build.sh  coefficient.cu  coefficient.cuh  cuRPCF.h  data.cpp  data.h  gpu-spectral-channel-DNS.sln  gpu-spectral-channel-DNS.vcxproj  gpu-spectral-channel-DNS.vcxproj.filters  kernel_example.cu  linear.cpp  linear.h  main.cpp  main_test.h  matrix_op.cpp  matrix_op.h  matrix_op_MKL.cpp  nonlinear.cu  nonlinear.cuh  operation.cpp  operation.h  output.cpp  output.h  parameter.txt  parameters.h  rhs.cu  rhs.cuh  solver.cpp  solver.h  statistics.cpp  statistics.h  test_coef.cpp  test_coef.h  test_dt_0.cpp  (+24 more)
CMakeModules/: FindMKL.cmake  FindOpenMP.cmake  FindPTHREADW32.cmake
Tests/: test_getUVW.cpp  test_inverse.cpp  test_nonlinear.h  test_para_reading.cpp  test_rhs.cpp  test_transform.h  test_transpose.cpp
include/: RPCFKernels.cuh  coefficient.cuh  cuRPCF.h  data.h  linear.h  main_test.h  matrix_op.h  nonlinear.cuh  operation.h  output.h  parameters.h  rhs.cuh  solver.h  statistics.h  transform.cuh  transform_multi_gpu.h  transpose.cuh  util.h  velocity.h
input/: parameter.txt
source/: RPCFKernels.cu  coefficient.cu  data.cpp  linear.cpp  linear.cu  main.cpp  main_loop.cpp  matrix_op.cpp  matrix_op_MKL.cpp  nonlinear.cu  operation.cpp  output.cpp  rhs.cpp  rhs.cu  solver.cpp  statistics.cpp  transform.cu  transform_multi_gpu.cpp  transpose.cu  velocity.cu
tests/: test_coef.cpp  test_coef.h  test_getUVW.h  test_inverse.h  test_main.cpp  test_nonlinear.cpp  test_para_reading.h  test_rhs.h  test_transform.cpp  test_transpose.h
